--- a/composer.json
+++ b/composer.json
@@ -24,11 +24,6 @@
         "nette/tester": "~1.7"
     },
     "autoload": {
-        "psr-4": {
-            "petrjirasek\\AlgoliaSearch\\": "src"
-        },
-        "classmap": [
-            "src/exceptions.php"
-        ]
+        "classmap": ["src/"]
     }
 }
