--- a/tests/tests/config/emptyParameters.neon
+++ b/tests/tests/config/emptyParameters.neon
@@ -1,4 +1,4 @@
 extensions:
-    algoliaSearch: petrjirasek\AlgoliaSearch\DI\AlgoliaSearchExtension
+    algoliaSearch: AlgoliaSearch\Nette\DI\AlgoliaSearchExtension
 
 algoliaSearch:
