--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "algolia/algoliasearch-client-php": "~1.9",
+        "algolia/algoliasearch-client-php": ">=1.10.2 <2.0",
         "nette/bootstrap": "~2.3"
     },
     "require-dev": {
